完善说明文档